# finai-research

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  AGENTS.md  AUDIT_V5_2026-06-18.md  BENCHMARK.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile  Dockerfile.dashboard  Dockerfile.gateway  Dockerfile.sse  FAQ.md  FIN_BRIEF.md  FUNDING.yml  INSTALL.md  LEGAL_CONSENT.md  LICENSE  MAINTAINERS.md  MANIFEST.in  PROFILE_README.md  PROJECT_EVALUATION.md  QUICKSTART.md  README.md  README_EN.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  USAGE_GUIDE.md  bib_check_report.md  (+14 more)
mcp_servers/: __init__.py  base.py  mcp_healthcheck.py  mcp_mock_helper.py  patch_mock_servers.py  pyproject.toml
mcp_servers/_shared/: __init__.py  _version.py
mcp_servers/user_arxiv/: Dockerfile
mcp_servers/user_bea_data/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_bea_data/tools/: get_bea_gdi.json  get_bea_gdp.json  get_bea_industry.json  get_bea_nipa.json
mcp_servers/user_brave_search/: Dockerfile
mcp_servers/user_chinese_customs/: Dockerfile  server.py
mcp_servers/user_chinese_literature/: SERVER_METADATA.json  server.py
mcp_servers/user_cnki/: Dockerfile  SERVER_METADATA.json
mcp_servers/user_cnrd/: Dockerfile  server.py
mcp_servers/user_context7/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_context7/tools/: get_context7_by_arxiv.json  get_context7_by_doi.json  get_context7_by_query.json
mcp_servers/user_cryptocompare/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_cryptocompare/tools/: get_cc_historical.json  get_cc_news.json  get_cc_price.json  get_cc_top_coins.json
mcp_servers/user_csmar/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_csmar/tools/: get_csmar_analyst.json  get_csmar_corporate.json  get_csmar_financial.json  get_csmar_trading.json
mcp_servers/user_e2b_mcp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_e2b_mcp/tools/: e2b_install.json  e2b_run.json  e2b_run_js.json  e2b_safe_eval.json  e2b_status.json
mcp_servers/user_eastmoney_bond/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_eastmoney_bond/tools/: get_bond_repo.json  get_bond_spot.json  get_bond_yield_curve.json
mcp_servers/user_eastmoney_fund/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_eastmoney_fund/tools/: get_fund_flow.json  get_fund_holdings.json  get_fund_nav.json  get_fund_performance.json
mcp_servers/user_eastmoney_option/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_eastmoney_option/tools/: get_option_chain.json  get_option_greeks.json  get_option_vol.json
mcp_servers/user_eastmoney_reports/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_eastmoney_reports/tools/: get_analyst_rank.json  get_board_concept.json  get_board_industry.json  get_research_report.json  get_stock_news.json
mcp_servers/user_enhanced_finance/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_enhanced_finance/tools/: get_commodity_price.json  get_crypto_price.json  get_forex_hist.json  get_forex_spot.json  get_futures_price.json  get_shipping_index.json
mcp_servers/user_eodhd/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_eodhd/tools/: get_economic_events.json  get_economic_indicators.json  get_ust_yield_rates.json
mcp_servers/user_fed_data/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_fed_data/tools/: get_fed_beige_book.json  get_fed_fomc.json  get_fed_interest_rate.json  get_fed_yield_curve.json
mcp_servers/user_filesystem_mcp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_filesystem_mcp/tools/: fs_batch_rename.json  fs_diff.json  fs_glob.json  fs_grep.json  fs_hash.json  fs_read.json  fs_stats.json  fs_tree.json  fs_watch.json  fs_write.json
mcp_servers/user_financial/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_financial/tools/: get_macro_china.json  get_macro_euro.json  get_macro_japan.json  get_macro_uk.json  get_macro_usa.json  get_wb_indicator.json
mcp_servers/user_hubei_stats/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_hubei_stats/tools/: get_china_gdp.json  get_china_gdp_yearly.json  get_consumer_retail.json  (+9 more)
mcp_servers/user_imf_data/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_latex_mcp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_macro_ceic/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_macro_datas/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_macro_stats/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_nber_wp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_newsapi/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_oecd_data/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_openalex/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_pandas_mcp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_playwright_mcp/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_province_stats/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_sec_edgar/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_semantic_scholar/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_sipo/: Dockerfile  server.py
mcp_servers/user_third_party_esg/: Dockerfile  server.py
mcp_servers/user_tushare/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_wanfang/: Dockerfile  SERVER_METADATA.json
mcp_servers/user_wb_data/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_wind/: Dockerfile  SERVER_METADATA.json  server.py
mcp_servers/user_wuhan_stats/: Dockerfile  SERVER_METADATA.json  __init__.py  server.py
mcp_servers/user_yfinance/: Dockerfile  SERVER_METADATA.json  server.py
(+1165 files in other folders)
