[build-system]
requires = ["hatchling>=1.30.0"]
build-backend = "hatchling.build"

[project]
name = "finai-research-workflow"
version = "1.0.0"
description = "经济金融领域 AI 学术研究工作流 — 论文写作（JF/JFE/RFS/经济研究/金融研究）与金融研报生成。集成 MCP 数据获取、因果推断（DID/IV/PSM/GMM）、LaTeX 排版和对抗性 review 循环。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinAI Research Workflow Contributors"}
]
keywords = [
    "academic-research",
    "financial-ai",
    "literature-review",
    "econometrics",
    "paper-writing",
    "latex",
    "mcp",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

requires-python = ">=3.10"
dependencies = [
    # ── 数据处理 ─────────────────────────────────────────────────────────────
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    # ── 知识图谱 ─────────────────────────────────────────────────────────────
    "networkx>=3.2.0",
    # ── 可视化 ───────────────────────────────────────────────────────────────
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.21.0",
    # ── 文档解析 ─────────────────────────────────────────────────────────────
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "Pillow>=10.3.0",
    # ── 文本与格式 ───────────────────────────────────────────────────────────
    "markdown>=3.4.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    # ── 金融数据 ─────────────────────────────────────────────────────────────
    "akshare>=1.18.63",
    "yfinance>=0.2.0",
    # ── LLM / AI ─────────────────────────────────────────────────────────────
    "openai>=2.0.0",
    "anthropic>=7.0.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    # ── 计量经济 ─────────────────────────────────────────────────────────────
    "linearmodels>=4.17",
    # ── 环境变量 / 配置 ─────────────────────────────────────────────────────
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    # ── 数据库 ───────────────────────────────────────────────────────────────
    "duckdb>=0.9.0",
    # ── Web 服务 ─────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.32.0",
    "pypandoc>=0.8.0",
    # ── Excel ────────────────────────────────────────────────────────────────
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

rag = [
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "jieba>=0.42.0",
]

deep-learning = [
    "torch>=2.2.0",
    "accelerate>=0.30.0",
]

econometrics = [
    "linearmodels>=4.17",
    "pandas-datareader>=0.10.0",
    "pandasql>=0.7.3",
]

knowledge = [
    "neo4j>=5.0.0",
    "pyvis>=0.3.0",
]

sandbox = [
    "e2b-code-interpreter>=2.0.0",
]

browser = [
    "playwright>=1.40.0",
]

monitor = [
    "apscheduler>=3.10.0",
]

all = [
    "finai-research-workflow[dev,rag,deep-learning,econometrics,knowledge,sandbox,browser,monitor]",
]

[project.scripts]
finai-test = "pytest:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/finai-research-workflow"
Documentation = "https://github.com/YOUR_USERNAME/finai-research-workflow#readme"
Repository = "https://github.com/YOUR_USERNAME/finai-research-workflow"
Issues = "https://github.com/YOUR_USERNAME/finai-research-workflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "E722"]
ignore = ["E501", "B028"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
