[build-system]
requires = ["hatchling>=1.30.0"]
build-backend = "hatchling.build"

[project]
name = "finai-research-workflow"
version = "0.1.0"
description = "经济金融领域 AI 学术研究工作流 — 论文写作（JF/JFE/RFS/经济研究/金融研究）与金融研报生成。集成 MCP 数据获取、因果推断（DID/IV/PSM/GMM）、LaTeX 排版和对抗性 review 循环。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinAI Research Workflow Maintainers"},
    {name = "csmar432", email = "noreply@users.noreply.github.com"},
]
keywords = [
    "academic-research",
    "financial-ai",
    "literature-review",
    "econometrics",
    "paper-writing",
    "latex",
    "mcp",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]

requires-python = ">=3.10"
# ── 核心依赖 (CI 必需) ─────────────────────────────────────────────────
# 装 pyproject 包时只装这些, 保证 pip install 时间 < 30s。
# 其余重型依赖 (streamlit, jupyter, fastapi, mcp, pdfplumber 等) 移到
# optional-dependencies, 用户按需 pip install -e ".[extras]"。
dependencies = [
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2.0",
    # 可视化
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    # 配置 / LLM 客户端
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "tiktoken>=0.7.0",
    # ── 测试套件 (核心, 必装) ──────────────────────────────────
    # 项目提供 83 个测试, pip install . 后应能直接跑 pytest tests/。
    # 只有 ruff (linter) 留在 optional [dev]。
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]
# extras: 装 [dev,extras] 一次拿齐所有功能
extras = [
    "plotly>=5.21.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "Pillow>=10.3.0",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.12.0",
    "akshare>=1.18.63",
    "yfinance>=0.2.0",
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "duckdb>=0.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.32.0",
    "openpyxl>=3.1.0",
]

rag = [
    "chromadb>=0.4.22",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.3.0",
    "jieba>=0.42.0",
]

jupyter = [
    "jupyter>=1.0.0",
    "ipykernel>=6.28.0",
]

deep-learning = [
    # torch>=2.12.0 and accelerate>=1.14.0 are listed here as
    # heavyweight optional dependencies for future deep learning modules.
    # They are NOT currently imported by any scripts/ or tests/ file.
    # Uncomment when needed: "torch>=2.2.0", "accelerate>=0.30.0",
]

econometrics = [
    "linearmodels>=4.17",
    "pandas-datareader>=0.10.0",
    "pandasql>=0.7.3",
    "diff-in-diff2>=1.0.0",
]

knowledge = [
    # neo4j, pyvis removed — knowledge graph uses networkx (core dep)
]

sandbox = [
    "e2b-code-interpreter>=2.0.0",
]

browser = [
    "playwright>=1.40.0",
]

monitor = [
    "apscheduler>=3.10.0",
]

# Legacy: packages declared in dependencies but not currently imported in scripts/tests.
# Kept here for reference — uncomment individually when needed.
# Removing from main dependencies reduces install time by ~45s.
# legacy = [
#     "lxml>=4.9.0",           # XML/HTML解析
#     "neo4j>=5.0.0",           # Graph DB (not used, networkx)
#     "pyvis>=0.3.0",           # Network viz (not used)
#     "pypandoc>=0.8.0",       # Pandoc wrapper (not used)
#     "python-pptx>=0.6.23",    # PPT generation (not used)
# ]

all = [
    "finai-research-workflow[dev,rag,deep-learning,econometrics,knowledge,sandbox,browser,monitor]",
]

[project.scripts]
# 主入口（轻量、不调 LLM、避免误触发 API）
finai = "scripts.cli:main"
finai-pipeline = "scripts.cli:pipeline_cmd_wrapper"
finai-test = "scripts.cli:test_cmd"
finai-health = "scripts.cli:health_cmd"
finai-data = "scripts.cli:data_cmd"
finai-lit-review = "scripts.cli:lit_review_cmd"

[project.urls]
Homepage = "https://github.com/csmar432/论文-研报工作流"
Documentation = "https://github.com/csmar432/论文-研报工作流#readme"
Repository = "https://github.com/csmar432/论文-研报工作流"
Issues = "https://github.com/csmar432/论文-研报工作流/issues"
Changelog = "https://github.com/csmar432/论文-研报工作流/blob/main/CHANGELOG.md"
Citation = "https://github.com/csmar432/论文-研报工作流/blob/main/CITATION.cff"
Releases = "https://github.com/csmar432/论文-研报工作流/releases"

# ── Hatch 构建配置 ───────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["scripts"]
# 不打包的东西 (字符串数组)
exclude = [
    "tests",
    "docs",
    "papers",
    "output",
    "data",
    "projects",
    "canvases",
    ".github",
    "scripts/legacy",    # (removed in v12 — kept for reference)
    "scripts/deprecated",
    "scripts/__pycache__",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/.env",
    "**/.env.local",
    "**/Thumbs.db",
    "**/*.db",
    "**/*.db-journal",
    "**/*.bak",
]

[tool.hatch.build.targets.wheel.force-include]
# 数据/资源目录必须显式 include，否则 wheel 不含
"config" = "finai_research_workflow/config"
"templates" = "finai_research_workflow/templates"
"knowledge" = "finai_research_workflow/knowledge"
"mcp_servers" = "finai_research_workflow/mcp_servers"
"examples" = "finai_research_workflow/examples"

[tool.hatch.build.targets.sdist]
include = [
    "scripts",
    "config",
    "templates",
    "knowledge",
    "mcp_servers",
    "examples",
    "releases",
    "tests",
    "docs",
    "README.md",
    "README_EN.md",
    "使用指南.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
    "requirements.txt",
    "requirements-optional.txt",
    "Dockerfile",
    "Dockerfile.dashboard",
    "Dockerfile.gateway",
    "Dockerfile.sse",
    "docker-compose.yml",
    "Makefile",
    "run.sh",
    "run.bat",
    "mkdocs.yml",
    ".env.example",
    ".pre-commit-config.yaml",
    ".editorconfig",
    ".gitattributes",
    ".gitignore",
]
exclude = [
    ".github/internal-reports/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.env",
    "**/.env.local",
    "**/.DS_Store",
]

[tool.ruff]
line-length = 100
# GitHub Actions CI 用 Python 3.12, 这里必须设 3.12 (或更高)
# 否则 3.12 引入的 f-string escape 语法会被 ruff 视为 invalid syntax
target-version = "py312"

[tool.ruff.lint]
# 项目代码库历史遗留较多 PEP8/import 风格问题, 只启用核心规则
# E: pycodestyle errors
# F: pyflakes (undefined name, unused import)
# W: pycodestyle warnings
# I: isort (import sort)
# B: bugbear (B001 = bare except:, B007 = loop over None, etc.)
#  谨慎启用 B —— 先只在 CI 阶段扫，不作为 pre-commit 阻塞
#  B001 (bare except) 是 P1 修复目标之一: docs/TASKS_RUNBOOK.md §P1-5
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long (有专门 line-length)
    "B028",  # flake8-bugbear (无 flake8-bugbear 时)
    "E402",  # module level import not at top of file (项目大量 sys.path hack)
    "E701",  # multiple statements on one line (colon) (项目代码风格)
    "E702",  # multiple statements on one line (semicolon) (项目代码风格)
    "E731",  # do not assign a lambda expression
    "E741",  # ambiguous variable name 'I' (科学计算代码常见)
    "E401",  # multiple imports on one line
    "F401",  # imported but unused (大量可选依赖, 故意保留)
    "F402",  # import shadowed by loop variable
    "F541",  # f-string without any placeholders (项目大量 f"" 作为模板)
    "F601",  # dictionary key literal repeated (项目有意为之, 业务表意)
    "F811",  # redefinition of unused
    "F821",  # undefined name (延迟引用, 实际运行时正常)
    "F822",  # undefined name in __all__
    "F841",  # local variable assigned but never used (大量解包语义, 故意忽略)
    "I001",  # import block is un-sorted or un-formatted (运行 isort 单独跑)
    "W291",  # trailing whitespace
    "W292",  # no newline at end of file
    "W293",  # whitespace on blank line
    # S110 (try-except-pass) 在以下合法场景允许: docs/TASKS_RUNBOOK.md §P1-5
    # agent_pipeline.py: LLM orchestrator 捕获所有 agent 异常，意图明确
    # event_monitor.py: 网络监控脚本需捕获 KeyboardInterrupt/SIGTERM
    # interactive_paper_pipeline.py: 用户交互管道捕获配置缺失
    "S110",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (require real network/db)",
    "unit: pure unit tests (no I/O)",
    "llm: tests that call LLM APIs (requires API key)",
    "mcp: tests that call MCP servers",
    "gpu: tests that require GPU",
    "flaky: known flaky tests (use with care)",
]
filterwarnings = [
    # error 在前作为"基准"规则, ignore 在前作为"覆盖"规则
    # pytest filterwarnings 按顺序匹配, 命中的规则胜出
    # 因此 ignore 必须放在比 error 更具体的位置
    "error",
    # DeprecationWarning: 第三方库大量无害的 deprecation
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # ResourceWarning: 子进程 / sqlite 连接在测试 teardown 时尚未关闭,
    # 实际生产无影响, 仅是清理顺序问题, 不应阻塞 CI
    "ignore::ResourceWarning",
    # PytestUnraisableExceptionWarning: 同上, 来自子进程 fd 泄漏
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # RuntimeWarning: statsmodels 的 QuantReg 在数据接近共线时 (本测试数据生成
    # 触发 within transform 后 x 接近 0 方差) 会 RuntimeWarning, 业务代码已
    # catch 并使用 numpy fallback, 不是测试失败原因
    "ignore::RuntimeWarning",
    # UserWarning: statsmodels + 业务代码用 warnings.warn 触发的"可选依赖缺失"提示
    # 业务代码已经处理降级路径, 不是测试失败原因
    "ignore::UserWarning",
]
# Minimum coverage to pass CI
# Set lower than production target to allow incremental improvement
# 目标是 80%, 当前设为 60% (在 ci.yml 中)
minversion = "7.0"

# ── Coverage configuration ─────────────────────────────────────────────
# 在 CI 中, 3 个 test batch 各自上传 .coverage 文件,
# 由 coverage job 用 `coverage combine` 合并后上报 Codecov.
[tool.coverage.run]
branch = true
source = ["scripts"]
omit = [
    "scripts/ci_verify.py",
    "scripts/mcp_schema_check.py",
    "scripts/keychain_setup.py",
    "scripts/setup_wizard.py",
    "scripts/universal_data_fetcher.py",
    "scripts/research_directions/*",
    "scripts/research_framework/journal_templates*.py",
    "scripts/research_framework/chinese_journal*.py",
    "scripts/research_framework/multilang*.py",
]

[tool.coverage.report]
# NOTE: fail_under = 60 added in v18 but current total coverage is ~7%.
# Uncomment when the project has reached 60% test coverage.
# fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
    "except ImportError:",
    "except ModuleNotFoundError:",
]
show_missing = true
skip_covered = false
precision = 1
