[build-system]
requires = ["hatchling>=1.30.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "finai-research-workflow"
version = "0.2.0-alpha"
description = "经济金融领域 AI 学术研究工作流 — 论文写作（JF/JFE/RFS/经济研究/金融研究）与金融研报生成。集成 MCP 数据获取、因果推断（DID/IV/PSM/GMM）、LaTeX 排版和对抗性 review 循环。"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FinAI Research Workflow Maintainers"},
    {name = "csmar432", email = "noreply@users.noreply.github.com"},
]
keywords = [
    "academic-research",
    "financial-ai",
    "literature-review",
    "econometrics",
    "paper-writing",
    "latex",
    "mcp",
    "cursor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Framework :: Hatch",
]

requires-python = ">=3.10"
# ── 核心依赖 (CI 必需) ─────────────────────────────────────────────────
# 装 pyproject 包时只装这些, 保证 pip install 时间 < 30s。
# 其余重型依赖 (streamlit, jupyter, fastapi, mcp, pdfplumber 等) 移到
# optional-dependencies, 用户按需 pip install -e ".[extras]"。
dependencies = [
    # 数据处理
    "pandas>=2.0.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "scipy>=1.13.0,<2.0",
    "statsmodels>=0.14.0,<1.0",
    "scikit-learn>=1.4.0,<2.0",
    "networkx>=3.2.0,<4.0",
    # 可视化
    "matplotlib>=3.8.0,<4.0",
    "seaborn>=0.13.0,<1.0",
    # 配置 / LLM 客户端
    "requests>=2.31.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "pyyaml>=6.0.0,<7.0",
    "pydantic>=2.0.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "openai>=1.0.0,<2.0",
    "anthropic>=0.30.0,<1.0",
    "tiktoken>=0.7.0,<1.0",
    # ── 测试套件 (核心, 必装) ──────────────────────────────────
    # 项目提供 83 个测试, pip install . 后应能直接跑 pytest tests/。
    # 只有 ruff (linter) 留在 optional [dev]。
    "pytest>=7.4.0,<10.0",
    "pytest-asyncio>=0.23.0,<2.0",
    "pytest-cov>=4.1.0,<8.0",
    "pytest-timeout>=2.2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0,<2.0",
]
# extras: 装 [dev,extras] 一次拿齐非 Web 功能（数据/绘图/导出/MCP 客户端）。
# 注意：fastapi/streamlit/uvicorn 会传递依赖 PyJWT，
# 在 Debian/Ubuntu 系统中会与 apt 管理的 python3-jwt 冲突。
# 因此 Web 套件拆到独立的 [web] extra，默认不装。
extras = [
    "plotly>=5.21.0,<7.0",
    "pdfplumber>=0.11.0,<2.0",
    "python-docx>=1.1.0,<2.0",
    "Pillow>=10.3.0,<99.0",
    "markdown>=3.4.0,<4.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "akshare>=1.18.63,<99.0",
    "yfinance>=0.2.0,<99.0",
    "mcp>=1.0.0,<99.0",
    "fastmcp>=0.1.0,<99.0",
    "duckdb>=0.9.0,<2.0",
    "openpyxl>=3.1.0,<4.0",
    "tenacity>=8.2.0,<10.0",
    "tushare>=1.4.0,<2.0",
]  # noqa: E501
# web: Web/SSE/Dashboard 套件（含 fastapi+streamlit，会传递依赖 PyJWT）。
# 仅在需要本地 Web UI 或 SSE 服务时安装：
#   pip install 'finai-research-workflow[web]'
# 不要与 apt 的 python3-fastapi / python3-jwt 共存，会触发 PEP 668。
web = [
    "fastapi>=0.115.0,<2.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.32.0,<2.0",
]
rag = [
    "chromadb>=0.4.22,<2.0",
    "faiss-cpu>=1.7.4,<2.0",
    "sentence-transformers>=2.3.0,<3.0",
    "jieba>=0.42.0,<99.0",
]

jupyter = [
    "jupyter>=1.0.0,<99.0",
    "ipykernel>=6.28.0,<99.0",
]

deep-learning = [
    # Optional deep-learning dependencies. None of these are required by the
    # current codebase, but they are listed here so users who want to extend
    # the framework with neural-network-based methods (e.g. CausalForest,
    # transformer-based sentiment analysis) can install them via:
    #     pip install finai-research-workflow[deep-learning]
    "scikit-learn>=1.3,<2.0",   # baseline ML (always useful, lightweight)
    "torch>=2.2.0,<3.0",        # neural networks (large download, opt-in)
]

econometrics = [
    "linearmodels>=4.17,<99.0",
    "pandas-datareader>=0.10.0,<99.0",
    "pandasql>=0.7.3,<99.0",
    # NOTE: diff-in-diff2 is referenced in scripts/research_framework/modern_did.py
    # but does NOT exist on PyPI as of 2026-07-04 (verified by audit_guard
    # check 14). The code gracefully raises EstimatorUnavailableError if the
    # import fails. See requirements.txt comment for the matching removal.
    "honestdid>=0.1.0,<99.0",  # Rambachan-Roth (2023) Honest DiD sensitivity analysis
    # honestdid requires: torch>=1.9, cvxpy>=1.1, scipy>=1.6, numpy>=1.19, pandas>=1.2
    # Install separately: pip install honestdid
]

knowledge = [
    # neo4j, pyvis removed — knowledge graph uses networkx (core dep)
]

sandbox = [
    "e2b-code-interpreter>=2.0.0,<2.0",
]

browser = [
    "playwright>=1.40.0,<2.0",
]

monitor = [
    "apscheduler>=3.10.0,<5.0",
]

# Legacy: packages declared in dependencies but not currently imported in scripts/tests.
# Kept here for reference — uncomment individually when needed.
# Removing from main dependencies reduces install time by ~45s.
# legacy = [
#     "lxml>=4.9.0,<6.0",           # XML/HTML解析
#     "neo4j>=5.0.0,<99.0",           # Graph DB (not used, networkx)
#     "pyvis>=0.3.0,<99.0",           # Network viz (not used)
#     "pypandoc>=0.8.0,<99.0",       # Pandoc wrapper (not used)
#     "python-pptx>=0.6.23,<99.0",    # PPT generation (not used)
# ]

all = [
    "finai-research-workflow[dev,rag,deep-learning,econometrics,knowledge,sandbox,browser,monitor]",
]

[project.scripts]
# 主入口（轻量、不调 LLM、避免误触发 API）
finai = "scripts.cli:main"
finai-pipeline = "scripts.cli:pipeline_cmd_wrapper"
finai-test = "scripts.cli:test_cmd"
finai-health = "scripts.cli:health_cmd"
finai-data = "scripts.cli:data_cmd"
finai-lit-review = "scripts.cli:lit_review_cmd"
# 与 PyPI 包名同名的别名，方便 wheel 安装用户直接调用
finai-research-workflow = "scripts.cli:pipeline_cmd_wrapper"
finai-doctor = "scripts.cli:doctor_cmd"

[project.urls]
Homepage = "https://github.com/csmar432/finai-research"
Documentation = "https://github.com/csmar432/finai-research#readme"
Repository = "https://github.com/csmar432/finai-research"
Issues = "https://github.com/csmar432/finai-research/issues"
Changelog = "https://github.com/csmar432/finai-research/blob/main/CHANGELOG.md"
Citation = "https://github.com/csmar432/finai-research/blob/main/CITATION.cff"
Releases = "https://github.com/csmar432/finai-research/releases"

# ── Hatch 构建配置 ───────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["scripts"]
# 不打包的东西 (字符串数组)
exclude = [
    "tests",
    "docs",
    "papers",
    "output",
    "data",
    "projects",
    "canvases",
    ".github",
    "scripts/legacy",    # (removed in v12 — kept for reference)
    "scripts/deprecated",
    "scripts/__pycache__",
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "**/.env",
    "**/.env.local",
    "**/Thumbs.db",
    "**/*.db",
    "**/*.db-journal",
    "**/*.bak",
]

[tool.hatch.build.targets.wheel.force-include]
# 数据/资源目录必须显式 include，否则 wheel 不含。
# T004 audit_fix_2026_07_12: 之前的 force-include 把 src 重定向到
# `finai_research_workflow/<dir>` (不存在的路径), 会导致 hatchling 报
# `Forced include not found` 错误。修正: 直接强制 include 源路径,
# wheel 中保持同样的目录结构 (例如 import scripts.audit_guard 仍能 work)。
"config" = "config"
"templates" = "templates"
"knowledge" = "knowledge"
"mcp_servers" = "mcp_servers"

[tool.hatch.build.targets.sdist]
include = [
    "scripts",
    "config",
    "templates",
    "knowledge",
    "mcp_servers",
    "papers",
    "tests",
    "docs",
    "README.md",
    "README_EN.md",
    "使用指南.md",
    "LICENSE",
    "CHANGELOG.md",
    "CITATION.cff",
    "pyproject.toml",
    "requirements.txt",
    "requirements-optional.txt",
    "Dockerfile",
    "Dockerfile.dashboard",
    "Dockerfile.gateway",
    "Dockerfile.sse",
    "docker-compose.yml",
    "Makefile",
    "run.sh",
    "run.bat",
    "mkdocs.yml",
    ".env.example",
    ".pre-commit-config.yaml",
    ".editorconfig",
    ".gitattributes",
    ".gitignore",
]
exclude = [
    ".github/internal-reports/**",
    "**/__pycache__",
    "**/*.pyc",
    "**/.env",
    "**/.env.local",
    "**/.DS_Store",
]

[tool.ruff]
line-length = 100
# GitHub Actions CI 用 Python 3.12, 这里必须设 3.12 (或更高)
# 否则 3.12 引入的 f-string escape 语法会被 ruff 视为 invalid syntax
target-version = "py312"

[tool.ruff.lint]
# 项目代码库历史遗留较多 PEP8/import 风格问题, 只启用核心规则
# E: pycodestyle errors
# F: pyflakes (undefined name, unused import)
# W: pycodestyle warnings
# I: isort (import sort)
# B: bugbear (B010 = bare except:, B013 = redundant tuple in except, etc.)
# Note: ruff >=0.6 renamed B001→B010 (flake8-bugbear reclassification).
# Codebase verified to have 0 bare except: as of 2026-06-24.
#  谨慎启用 B —— 先只在 CI 阶段扫，不作为 pre-commit 阻塞
#  B001 (bare except) 修复进展追踪: docs/IMPROVEMENT_ROADMAP.md
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long (有专门 line-length)
    "B028",  # flake8-bugbear (无 flake8-bugbear 时)
    "E402",  # module level import not at top of file (项目大量 sys.path hack)
    "E701",  # multiple statements on one line (colon) (项目代码风格)
    "E702",  # multiple statements on one line (semicolon) (项目代码风格)
    "E731",  # do not assign a lambda expression
    "E741",  # ambiguous variable name 'I' (科学计算代码常见)
    "E401",  # multiple imports on one line
    "F401",  # imported but unused (大量可选依赖, 故意保留)
    "F402",  # import shadowed by loop variable
    "F541",  # f-string without any placeholders (项目大量 f"" 作为模板)
    "F601",  # dictionary key literal repeated (项目有意为之, 业务表意)
    "F811",  # redefinition of unused
    "F821",  # undefined name (延迟引用, 实际运行时正常)
    "F822",  # undefined name in __all__
    "I001",  # import block is un-sorted or un-formatted (运行 isort 单独跑)
]
# P2-2 修复 (2026-06-29): F841 死代码已清理 237 处（ruff --unsafe-fixes），
# 现移除 F841 from ignore list，CI 必须 0 F841 错误才能合并。
# P2-2 修复 2026-06-28: 移除 W291/W292/W293 (trailing whitespace, no newline at eof, ws on blank line)
# 这些是 trivial 风格问题，CI 跑 formatter (black/ruff format) 自动处理
# 死代码清理记录: docs/IMPROVEMENT_ROADMAP.md (P2-2 已修 237 处)
# 当前仅在 ruff 中显式为 warning，不在 CI fail 阻断流程

# S110 (try-except-pass) management:
# - Core academic/research files: handled with inline noqa: S110 (已修复)
# - Infrastructure files (core/, agent/, demo/): use per-file-ignores below
#   because try-except-pass is intentional for optional feature degradation.
#   These are infrastructure concerns (MCP fallback, sandbox, dashboard),
#   not academic logic. Risk: LOW.
# - Standalone entry-point scripts: also per-file-ignored for graceful
#   degradation when optional dependencies/credentials are absent.
#   research_framework/ modules: NO per-file-ignores (academic logic).
[tool.ruff.lint.per-file-ignores]
"scripts/core/*.py" = ["S110"]  # P2-2 修复计划：F841 移除后会让 143 处死代码报错，需逐一清理后才能稳定
# P3 2026-06-29: tests/ 保留 F841 忽略 — ruff --unsafe-fixes 在 tests 删除
# "var = (call)" 会留下裸表达式 (orphan expr)，影响可读性。Tests 中这类
# "为 side-effect 而 eval" 的赋值（如 engine = RegressionEngine(...)）非常常见，
# 让 ruff 标记为 warning 但不阻断，等手动清理或保留 noqa。
"tests/*.py" = ["F841"]  # noqa: orphan-expr
"scripts/agents/*.py" = ["S110"]
"scripts/demo_*.py" = ["S110"]
"scripts/dashboard*.py" = ["S110"]
"scripts/event_monitor.py" = ["S110"]
"scripts/workflow_*.py" = ["S110"]
"scripts/factor_models.py" = ["S110"]
"scripts/on_enter.py" = ["S110"]
"scripts/data_version.py" = ["S110"]
"scripts/universal_data_fetcher.py" = ["S110"]
"scripts/data_pipeline.py" = ["S110"]
"scripts/dependency_upgrader.py" = ["S110"]
"scripts/experiment_tracker.py" = ["S110"]
"scripts/fetch_provincial_stats.py" = ["S110"]
"scripts/health_check.py" = ["S110"]
"scripts/keychain_setup.py" = ["S110"]
"scripts/knowledge_graph.py" = ["S110"]
"scripts/mcp_diagnostic.py" = ["S110"]
"scripts/paper_full_pipeline.py" = ["S110"]
"scripts/paper_reader.py" = ["S110"]
"scripts/paper_write.py" = ["S110"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# pytest-asyncio: treat all async test functions as auto-marked (no need for
# @pytest.mark.asyncio on every async test). CI 历史：2026-06-26 之前
# 没有 auto 模式，async 测试需显式 @pytest.mark.asyncio 才能执行；现在
# auto 模式减少样板代码且防止遗漏。
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--durations=10",
    # audit-2026-07-04 P0-1: smoke 测试默认跳过（防止"为覆盖率而生"反模式）。
    # 仅在显式 `pytest -m smoke` 时才运行。
    "-m", "not smoke",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (require real network/db)",
    "unit: pure unit tests (no I/O)",
    "llm: tests that call LLM APIs (requires API key)",
    "mcp: tests that call MCP servers",
    "gpu: tests that require GPU",
    "flaky: known flaky tests (use with care)",
    # audit-2026-07-04 P0-1: smoke marker 语义 — 仅 verify 模块可 import 的轻测试。
    # 默认被 addopts 过滤掉；显式跑用 `pytest -m smoke`。
    "smoke: quick smoke tests (skipped by default, run with -m smoke)",
    # audit-2026-07-04 PR-2: tests requiring LaTeX engines (tectonic/xelatex).
    # CI ubuntu runner does not have tectonic; these tests self-skip via
    # shutil.which() at test time. The marker is for explicit targeting.
    "latex: tests requiring LaTeX engines (tectonic/xelatex) installed",
]
filterwarnings = [
    # error 在前作为"基准"规则, ignore 在前作为"覆盖"规则
    # pytest filterwarnings 按顺序匹配, 命中的规则胜出
    # 因此 ignore 必须放在比 error 更具体的位置
    "error",
    # DeprecationWarning: 第三方库大量无害的 deprecation
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # ResourceWarning: 子进程 / sqlite 连接在测试 teardown 时尚未关闭,
    # 实际生产无影响, 仅是清理顺序问题, 不应阻塞 CI
    "ignore::ResourceWarning",
    # PytestUnraisableExceptionWarning: 同上, 来自子进程 fd 泄漏
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # RuntimeWarning: statsmodels 的 QuantReg 在数据接近共线时 (本测试数据生成
    # 触发 within transform 后 x 接近 0 方差) 会 RuntimeWarning, 业务代码已
    # catch 并使用 numpy fallback, 不是测试失败原因
    "ignore::RuntimeWarning",
    # UserWarning: statsmodels + 业务代码用 warnings.warn 触发的"可选依赖缺失"提示
    # 业务代码已经处理降级路径, 不是测试失败原因
    "ignore::UserWarning",
]
# Minimum coverage to pass CI
# Set lower than production target to allow incremental improvement
# 目标是 80%, 当前 CI 阈值 25% (在 ci.yml 中)
minversion = "7.0"

# ── Coverage configuration ─────────────────────────────────────────────
# 在 CI 中, 3 个 test batch 各自上传 .coverage 文件,
# 由 coverage job 用 `coverage combine` 合并后上报 Codecov.
[tool.coverage.run]
branch = true
source = ["scripts"]
# ── audit-2026-07-04 P0-1 + PR-8G: omit 已全部移除 ──────────────────
# 上一阶段用 omit "藏分母" 是 audit 标记的反模式 (audit-2026-07-04.md §P0-1)。
# 现在 fail-under 真实反映测试覆盖。
# 如发现某个模块 CI 无法 import，正确做法是 (a) 补测试 或 (b) 走
# optional-import / sys.exit(0) graceful degrade，而不是 omit。
# 见 docs/audit/audit-2026-07-04.md §P0-1 "CI 覆盖率凑数恶性循环"。
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
    "except ImportError:",
    "except ModuleNotFoundError:",
]
show_missing = true
skip_covered = false
precision = 1
