[project]
name = "paper-workflow-mcp"
version = "1.0.0"
description = "Custom MCP servers for 论文-研报工作流"
requires-python = ">=3.10"

dependencies = [
    "mcp>=1.0.0",
    "akshare>=1.18.0",
    "requests>=2.31.0",
    "tushare>=1.4.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["user_financial*", "user_tushare*", "user_eastmoney*", "user_enhanced*"]
